[project]
name = "ccn-review"
version = "0.1.0"
description = "Input and Output Review for the Charge Correction Bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pywin32>=311",
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
    "python_dateutil>=2.8.2",
]
